added / fixed possibility to average attributes occurring the same date.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Eonydis
@@ -27,12 +26,13 @@ dist.jar=${dist.dir}/Eonydis.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.guava-12.0.jar=C:\\data\\Gephi\\Java files\\java libraries\\guava-12.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.Joda.classpath}:\
-    ${libs.Guava.classpath}:\
-    ${file.reference.javacsv.jar}
+    ${file.reference.javacsv.jar}:\
+    ${file.reference.guava-12.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
